feat: Implement admin functionalities for owner request management and user listing, enhance dashboard statistics